--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --devtool eval --progress --colors --hot",
+    cross-env NODE_ENV=production webpack
     "prod": "webpack -p"
   },
   "repository": {
